crates/fixtures/tests/snapshots/hostile__content_concurrent_edits.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Before  [typed] after, and a second phrase to ",
            "glyphs": [
              {
                "id": 3,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 32,
                "x": 7085,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 33,
                "x": 12717,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 42,
                "x": 16535,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 45,
                "x": 22719,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 27371,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 33116,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 1,
                "x": 35741,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 506,
                "x": 38366,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 47,
                "x": 41858,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 52,
                "x": 45519,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 43,
                "x": 51286,
                "y": 10707,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 32,
                "x": 57853,
                "y": 10707,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 31,
                "x": 63598,
                "y": 10707,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 507,
                "x": 69985,
                "y": 10707,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 1,
                "x": 73589,
                "y": 10707,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 28,
                "x": 76214,
                "y": 10707,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 416,
                "x": 81947,
                "y": 10707,
                "text": {
                  "start": 17,
                  "end": 19
                }
              },
              {
                "id": 32,
                "x": 89201,
                "y": 10707,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 45,
                "x": 94946,
                "y": 10707,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 474,
                "x": 98686,
                "y": 10707,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 1,
                "x": 102065,
                "y": 10707,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 28,
                "x": 104690,
                "y": 10707,
                "text": {
                  "start": 23,
                  "end": 24
                }
              },
              {
                "id": 41,
                "x": 110367,
                "y": 10707,
                "text": {
                  "start": 24,
                  "end": 25
                }
              },
              {
                "id": 31,
                "x": 117193,
                "y": 10707,
                "text": {
                  "start": 25,
                  "end": 26
                }
              },
              {
                "id": 1,
                "x": 123580,
                "y": 10707,
                "text": {
                  "start": 26,
                  "end": 27
                }
              },
              {
                "id": 28,
                "x": 126205,
                "y": 10707,
                "text": {
                  "start": 27,
                  "end": 28
                }
              },
              {
                "id": 1,
                "x": 131938,
                "y": 10707,
                "text": {
                  "start": 28,
                  "end": 29
                }
              },
              {
                "id": 46,
                "x": 134563,
                "y": 10707,
                "text": {
                  "start": 29,
                  "end": 30
                }
              },
              {
                "id": 32,
                "x": 139452,
                "y": 10707,
                "text": {
                  "start": 30,
                  "end": 31
                }
              },
              {
                "id": 30,
                "x": 145197,
                "y": 10707,
                "text": {
                  "start": 31,
                  "end": 32
                }
              },
              {
                "id": 42,
                "x": 150694,
                "y": 10707,
                "text": {
                  "start": 32,
                  "end": 33
                }
              },
              {
                "id": 41,
                "x": 156878,
                "y": 10707,
                "text": {
                  "start": 33,
                  "end": 34
                }
              },
              {
                "id": 31,
                "x": 163704,
                "y": 10707,
                "text": {
                  "start": 34,
                  "end": 35
                }
              },
              {
                "id": 1,
                "x": 170091,
                "y": 10707,
                "text": {
                  "start": 35,
                  "end": 36
                }
              },
              {
                "id": 43,
                "x": 172716,
                "y": 10707,
                "text": {
                  "start": 36,
                  "end": 37
                }
              },
              {
                "id": 35,
                "x": 179170,
                "y": 10707,
                "text": {
                  "start": 37,
                  "end": 38
                }
              },
              {
                "id": 45,
                "x": 185940,
                "y": 10707,
                "text": {
                  "start": 38,
                  "end": 39
                }
              },
              {
                "id": 28,
                "x": 190581,
                "y": 10707,
                "text": {
                  "start": 39,
                  "end": 40
                }
              },
              {
                "id": 46,
                "x": 196314,
                "y": 10707,
                "text": {
                  "start": 40,
                  "end": 41
                }
              },
              {
                "id": 32,
                "x": 201203,
                "y": 10707,
                "text": {
                  "start": 41,
                  "end": 42
                }
              },
              {
                "id": 1,
                "x": 206948,
                "y": 10707,
                "text": {
                  "start": 42,
                  "end": 43
                }
              },
              {
                "id": 47,
                "x": 209573,
                "y": 10707,
                "text": {
                  "start": 43,
                  "end": 44
                }
              },
              {
                "id": 42,
                "x": 213234,
                "y": 10707,
                "text": {
                  "start": 44,
                  "end": 45
                }
              },
              {
                "id": 1,
                "x": 219418,
                "y": 10707,
                "text": {
                  "start": 45,
                  "end": 46
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "follow.",
            "glyphs": [
              {
                "id": 33,
                "x": 0,
                "y": 24224,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 42,
                "x": 3818,
                "y": 24224,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 39,
                "x": 9889,
                "y": 24224,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 39,
                "x": 13246,
                "y": 24224,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 42,
                "x": 16603,
                "y": 24224,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 50,
                "x": 22787,
                "y": 24224,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 473,
                "x": 30368,
                "y": 24224,
                "text": {
                  "start": 6,
                  "end": 7
                }
              }
            ],
            "layer": "content"
          }
        ]
      },
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 280576,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 8448,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "On the middle.",
            "glyphs": [
              {
                "id": 16,
                "x": 0,
                "y": 8241,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 41,
                "x": 5973,
                "y": 8241,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 1,
                "x": 11092,
                "y": 8241,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 47,
                "x": 13060,
                "y": 8241,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 35,
                "x": 15806,
                "y": 8241,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 20883,
                "y": 8241,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 25191,
                "y": 8241,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 40,
                "x": 27159,
                "y": 8241,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 36,
                "x": 34771,
                "y": 8241,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 31,
                "x": 37289,
                "y": 8241,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 31,
                "x": 42079,
                "y": 8241,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 39,
                "x": 46869,
                "y": 8241,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 32,
                "x": 49387,
                "y": 8241,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 473,
                "x": 53450,
                "y": 8241,
                "text": {
                  "start": 13,
                  "end": 14
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
