crates/fixtures/tests/snapshots/hostile__content_concurrent_policy_deletion.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "The owner of three relations.",
            "glyphs": [
              {
                "id": 21,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 35,
                "x": 6803,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 32,
                "x": 13573,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 1,
                "x": 19318,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 42,
                "x": 21943,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 50,
                "x": 28127,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 41,
                "x": 36733,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 32,
                "x": 43559,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 45,
                "x": 49304,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 1,
                "x": 54069,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 42,
                "x": 56694,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 33,
                "x": 62878,
                "y": 10707,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 1,
                "x": 66865,
                "y": 10707,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 47,
                "x": 69490,
                "y": 10707,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 35,
                "x": 73151,
                "y": 10707,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 45,
                "x": 79921,
                "y": 10707,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 32,
                "x": 84573,
                "y": 10707,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 32,
                "x": 90318,
                "y": 10707,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 1,
                "x": 96063,
                "y": 10707,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 45,
                "x": 98688,
                "y": 10707,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 32,
                "x": 103340,
                "y": 10707,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 39,
                "x": 108972,
                "y": 10707,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 28,
                "x": 112216,
                "y": 10707,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 47,
                "x": 117949,
                "y": 10707,
                "text": {
                  "start": 23,
                  "end": 24
                }
              },
              {
                "id": 36,
                "x": 121610,
                "y": 10707,
                "text": {
                  "start": 24,
                  "end": 25
                }
              },
              {
                "id": 42,
                "x": 124967,
                "y": 10707,
                "text": {
                  "start": 25,
                  "end": 26
                }
              },
              {
                "id": 41,
                "x": 131151,
                "y": 10707,
                "text": {
                  "start": 26,
                  "end": 27
                }
              },
              {
                "id": 46,
                "x": 137977,
                "y": 10707,
                "text": {
                  "start": 27,
                  "end": 28
                }
              },
              {
                "id": 473,
                "x": 142640,
                "y": 10707,
                "text": {
                  "start": 28,
                  "end": 29
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Edited: The replacement.",
            "glyphs": [
              {
                "id": 6,
                "x": 0,
                "y": 32416,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 31,
                "x": 6792,
                "y": 32416,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 36,
                "x": 13179,
                "y": 32416,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 47,
                "x": 16536,
                "y": 32416,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 32,
                "x": 20197,
                "y": 32416,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 31,
                "x": 25942,
                "y": 32416,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 475,
                "x": 32329,
                "y": 32416,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 1,
                "x": 35708,
                "y": 32416,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 21,
                "x": 38118,
                "y": 32416,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 35,
                "x": 44921,
                "y": 32416,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 32,
                "x": 51691,
                "y": 32416,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 1,
                "x": 57436,
                "y": 32416,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 45,
                "x": 60061,
                "y": 32416,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 32,
                "x": 64713,
                "y": 32416,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 43,
                "x": 70345,
                "y": 32416,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 39,
                "x": 76799,
                "y": 32416,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 28,
                "x": 80043,
                "y": 32416,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 30,
                "x": 85776,
                "y": 32416,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 32,
                "x": 91273,
                "y": 32416,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 40,
                "x": 97018,
                "y": 32416,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 32,
                "x": 107167,
                "y": 32416,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 41,
                "x": 112912,
                "y": 32416,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 47,
                "x": 119682,
                "y": 32416,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 473,
                "x": 123343,
                "y": 32416,
                "text": {
                  "start": 23,
                  "end": 24
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
